# full-stack-template

./: README.md  docker-compose.yaml
backend/rest-api/: Dockerfile  log-config.yaml  main.py  pyproject.toml  settings.py
backend/rest-api/api/v1/: __init__.py
backend/rest-api/api/v1/dependencies/: __init__.py  security.py  user.py
backend/rest-api/api/v1/schemas/: __init__.py  address.py  api_schema.py  credentials.py  jwt_token.py  profile.py  user.py
backend/rest-api/api/v1/security/: response_schemas.py  router.py
backend/rest-api/api/v1/users/: router.py
backend/rest-api/database/: __init__.py
backend/rest-api/database/models/: __init__.py  address.py  profile.py  user.py
backend/rest-api/database/services/: __init__.py  profile.py  user.py
backend/rest-api/scripts/: migrate.sh
backend/rest-api/security/: password_util.py
backend/rest-api/services/: email.py
frontend/: .eslintrc.cjs  README.md  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.config.json
frontend/src/: App.vue  main.ts
frontend/src/components/: FieldInput.vue  FormLogin.vue  FormRegister.vue  FormResetPassword.vue
frontend/src/composables/: useApi.ts  useI18n.ts  useValidations.ts
frontend/src/layouts/: DefaultLayout.vue
frontend/src/locales/: de.json  en.json  translations.babel
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/views/: AboutView.vue  AccountActivationView.vue  AuthenticationView.vue  HomeView.vue  ResetPasswordView.vue
scripts/ps/: create-certificate.ps1
scripts/sh/: create-certificate.sh
(+4 files in other folders)
