[tool.poetry]
name = "rest-api"
version = "0.1.0"
description = "The rest API"
authors = ["leibetsederjakob <leibetsederjakob@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rest_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sqlalchemy = "^1.4.45"
psycopg2 = "^2.9.5"
alembic = "^1.8.1"
python-dotenv = "^0.21.0"
fastapi-jwt-auth = "^0.5.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyhumps = "^3.8.0"
pydantic = {extras = ["email"], version = "^1.10.2"}
python-multipart = "^0.0.5"
pydantic-computed = "^0.1.1"
slowapi = "^0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
